--- a/index.html
+++ b/index.html
@@ -156,16 +156,21 @@
                 Wanna see more services? </br>
                 <a href="">Click here</a>
             </p>
-            <div class="helpContainer">
-                <p class="title">
 
-                </p>
-                <div class="helpLine">
-                    <p></p>
-                    <p class="p-outstanding">
+            <div class="helpSuperContainer">
 
+                <div class="helpContainer">
+                    <p class="title">
+                        Let us help you!
                     </p>
-                    <p></p>
+                    <div class="helpLine">
+                        <p>Helpline</p>
+                        <p class="outstanding">
+                            (954) 558-8360
+                        </p>
+                        <p>...or contact us...</p>
+                        <button>here</button>
+                    </div>
                 </div>
             </div>
             
