--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home | Postpartum healing and education center</title>
     <link rel="stylesheet" href="./css/main.css">
-
+    <link rel="stylesheet" href="./css/home.css">
 </head>
 
 <body onresize="updateLowerBarPosition()">
@@ -180,7 +180,8 @@
         </div>
     </div>
 
-    <script src="/assets/dist/main.js"></script>
+    <script src="./assets/dist/main.js"></script>
+    <script src="./assets/dist/home.js"></script>
 </body>
 
 </html>
